fix(lesehelden): Align test left

--- a/assets/lesehelden/main.scss
+++ b/assets/lesehelden/main.scss
@@ -19,7 +19,8 @@ body {
   flex: 1;
   flex-direction: column;
   font-size: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  font-family: "Times New Roman";
+  //font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   font-weight: normal;
 }
 
@@ -55,7 +56,6 @@ body {
 
   .description {
     flex: 0.6;
-    text-align: justify;
 
     p {
       margin-top: 0;
